# testCICD

./: CMakeLists.txt  main.cpp  version.cpp  version.h
.github/workflows/: ci.yml
